--- a/frontend/src/locales/en/en.json
+++ b/frontend/src/locales/en/en.json
@@ -541,7 +541,7 @@
     },
     "legal": {
       "privacyPolicy": "Privacy Policy",
-      "termsOfService": "Terms of Service",
+      "termsOfService": "Terms and Condition",
       "cookiePolicy": "Cookie Policy",
       "allRightsReserved": "All rights reserved."
     }
