--- a/frontend/src/locales/en/en.json
+++ b/frontend/src/locales/en/en.json
@@ -335,7 +335,7 @@
   },
   "HomepageHero": {
     "typingEffect": {
-      "sentence1": "Welcome To Placment Eco System GTR Academy",
+      "sentence1": "Welcome To Placement Eco System GTR Academy",
       "sentence2": "Choose from 50+ expert templates",
       "sentence3": "Get intelligent writing assistance",
       "sentence4": "Preview changes in real-time",
